# Cell2Fire

./: .gitignore  LICENSE  README.md  environment.yml
Cell2Fire/: DataGeneratorC.py  Heuristics.py  ParseInputs.py  Stats.py  c2fml_us.yml  ellipse_algorithms.py  ellipse_sim.py
Cell2FireC/: CMakeLists.txt  Cell2Fire.cpp  Cell2Fire.h  CellsFBP.cpp  CellsFBP.h  Ellipse.cpp  ReadCSV.cpp  WriteCSV.cpp  fuelmodelBP.cpp  fuelmodelBP.h  k_opt.csv  k_opt_better.csv  k_opt_frobeniusnorm.csv  k_opt_kmh.csv  k_opt_mse.csv  k_opt_prev(Here).csv
Cell2FireC_Canada/: Cell2Fire  Cell2Fire.cpp  FBP.cpp  FBP2  FBP2.cpp  FBP2.h  FBP3  FBP3.cpp  Makefile  Makefile.macos  ReadCSV.cpp  makefile_fbp
Cell2FireC_Canada_old/: Cell2Fire.cpp  Cell2Fire_old
Cell2FireC_Chile/: Cell2Fire  Cell2Fire.cpp  Cell2Fire_old  FuelModelKitral.cpp  Makefile
Cell2FireC_US/: CMakeLists.txt  Cell2Fire.cpp  Cell2Fire.h  CellsFBP.cpp  CellsFBP.h  Ellipse.h  Makefile  ReadArgs.cpp  ReadArgs.h  ReadCSV.h  WriteCSV.cpp  fuelmodelBP.cpp  fuelmodelBP.h  makefile.macos  makefile_noml.macos  readme.md
Cell2FireW/: Cell2Fire  Cell2Fire.cpp  Cell2Fire.h  Cell2Fire_DFO.py  Cells.cpp  Cells.h  DataGenerator.cpp  FuelModelFBP.cpp  FuelModelSpain.cpp  ReadArgs.cpp  ReadArgs.h  ReadCSV.cpp  ReadCSV.h  main_DFO.py  makefile  makefile.macos
notebooks/: DataGenerated_Small_now.csv  DataGenerated_Small_ros.csv  DataGeneratorC.py  DataGenerator_FBP.ipynb  Execute_Cell2Fire_Canada.ipynb  Execute_Cell2Fire_Canada_example.ipynb  Execute_Cell2Fire_US.ipynb  Execute_Cell2Fire_US_example.ipynb  c2fml_canada.ipynb  c2fml_us.ipynb  (+17 more)
(+19033 files in other folders)
